# corkboard-bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: events.rs  faqs.rs  list.rs  luckydex.rs  luckymon.rs  luckytrade.rs  mod.rs  pins.rs
src/validation/: validation.rs
