[package]
name = "corkboard-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = "1.0.149"
serde_json = "1.0.89"
chrono = "0.4.23"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rustemon = "3.0.1"
rand = "0.8.5"
fastrand = "1.8.0"

