[package]
name = "corkboard-bot"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.7", features = ["model", "collector"] }
tokio = { version = "1.40.0", features = ["full", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11.27", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }
serde = "1.0.209"
serde_json = "1.0.127"
chrono = "0.4.38"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rustemon = "3.5.0"
image = "0.24.9"
imageproc = "0.23.0"
rusttype = "0.9.3"
rand = "0.8.5"
